<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="my_title">My Nanodegree Apps!</string>
    <string name="media_streamer">spotify streamer</string>
    <string name="super_duo1">scores app</string>
    <string name="super_duo2">library app</string>
    <string name="ant_terminater">Build It Bigger</string>
    <string name="materlize">xyz Reader</string>
    <string name="capstone">capstone:my own app</string>
</resources>
