<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical" tools:context=".MainActivity"
    android:background="#dfeaf1">

    <TextView android:text="@string/my_title" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        android:paddingBottom="20sp"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/media_streamer"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:id="@+id/button_spotify"
        android:layout_gravity="center_horizontal"
        android:background="#f08c35" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/super_duo1"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:id="@+id/button_scores_app"
        android:layout_gravity="center"
        android:background="#f08c35" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/super_duo2"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:id="@+id/button_library_app"
        android:layout_gravity="center"
        android:background="#f08c35" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/ant_terminater"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:id="@+id/button_build_it_bigger"
        android:layout_gravity="center"
        android:background="#f08c35" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/materlize"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:id="@+id/button_xyz_reader"
        android:layout_gravity="center"
        android:background="#f08c35" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:textAllCaps="true"
        android:layout_gravity="center"
        android:id="@+id/button_capstone"
        android:background="#E91E63"
        android:textColor="@android:color/white" />
</LinearLayout>
